tests/baselines/reference/restElementWithInitializer2.errors.txt
tests/cases/conformance/es6/destructuring/restElementWithInitializer2.ts(3,5): error TS2364: Invalid left-hand side of assignment expression.


==== tests/cases/conformance/es6/destructuring/restElementWithInitializer2.ts (1 errors) ====
    var a: number[];
    var x: number[];
    [...x = a] = a;  // Error, rest element cannot have initializer
        ~~~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    